<?xml version="1.0"?>
<package>
  <name>iai_maps</name>
  <version>0.0.1</version>
  <description>
    University of Bremen kitchen model
  </description>
  <maintainer email="hpp@laas.fr">Florent Lamiraux</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>xacro</buildtool_depend>
  <url>http://ros.org/wiki/iai_maps</url>
</package>
